fix title wrapping

--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -11,6 +11,7 @@
     border-right: 2px solid #666;
     width: max-content;
     font-size: 2em;
+    white-space: nowrap;
   }
 
   .description {
